# ucr-ci0162-2024

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  commands.md
game/: config.txt  game
src/: CMakeLists.txt  main.cpp
src/Components/: Drawing.hpp  Physics.hpp
src/ECS/: ECS.hpp  ECS_Core.hpp
src/Game/: CMakeLists.txt  Core.hpp  Parsing.cpp  Parsing.hpp  ServiceActions.cpp  ServiceActions.hpp  main.cpp
src/Services/: AssetStore.cpp  AssetStore.hpp  CMakeLists.txt  StopwatchService.cpp  StopwatchService.hpp  WindowService.cpp  WindowService.hpp
src/Systems/: CMakeLists.txt  Systems.cpp  Systems.hpp
src/Utils/: MemoryAliases.hpp  Traits.hpp
